added all functionality minus image rendering

--- a/gitpub/views/food_index.ejs
+++ b/gitpub/views/food_index.ejs
@@ -9,9 +9,9 @@
 <body>
     <h1>Welcome to GitPub</h1>
     <ul>
-        <% for(let drink in drinks) { %>
+        <% for(let foods in food) { %>
             <li>
-                <a href="/drinks/<%=drink%>"> <%=drinks[drink].name.charAt().toUpperCase()%><%=drinks[drink].name.slice(1)%></a>
+                <a href="/food/<%=foods%>"> <%=food[foods].name%></a>
             </li>
                 
         
