--- a/gitpub/views/food_show.ejs
+++ b/gitpub/views/food_show.ejs
@@ -9,13 +9,12 @@
 <body>
     <h1>At FooBar</h1>
         <h2> 
-            <%=drinks.name %> 
-            <a href="<%=drinks.image%>"></a>
+            <%=food.name%> 
         </h2>
         <h3>
-            <%=drinks.price%>
+            <%=food.price%>
         </h3>
-        <a href="/drinks">Back to Menu</a>
+        <a href="/food">Back to Menu</a>
     <style>
         body {
             background-color: lavender;
