added css files

--- a/budgtr/views/index.ejs
+++ b/budgtr/views/index.ejs
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Public/styles.css">
+    <link rel="stylesheet" href="/public/normalize.css"/>
+    <link rel="stylesheet" href="/public/skeleton.css"/>
     <title>Budgets</title>
 </head>
 <body>
     <div class="container">
         <h1>Hello Adult Life</h1>
     </div>
-    <table>
-        <a href=""><tr>Income</tr><a>
-        <td>1000</td>
-    </table>
 </body>
 </html>
