added final bug fixes

--- a/budgtr/views/show.ejs
+++ b/budgtr/views/show.ejs
@@ -9,9 +9,9 @@
     <title>Budget</title>
 </head>
 <body>
-    <h1><%=allBudget.name%> </h1>
-    <a href="/budgets/<%=allBudget.index%>"><button>Back</button></a>
+    <a href="/budgets/<%=allBudget.item%>"><button>Back</button></a>
     <div class="container">
+    <h2><%=allBudget.name%></h2>
     <table> 
         <tbody>
         <td>  
